# indi_cam84_ccd

./: .gitignore  10-cam84.rules  99-cam84.rules  BUILD  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  MFTnotes.txt  Makefile  README.md  cam84_ccd.cpp  cam84_ccd.h  cmake_install.cmake  indi_cam84_ccd  indi_cam84_ccd.xml  install_manifest.txt  libcam84.c  libcam84.cpp  libcam84.cpp.slow.cpp  libcam84.c~  libcam84.h  libcam84_BACKUP_4525.cpp  libcam84_REMOTE_4525.cpp
